docs/v0.91/开发指南.md
# 开发指南
Development Guide

## 版本信息
Version Info

- **版本号 Version**: 0.91

---

## 本地运行
Run Locally

### 方法 1: 使用 Python 服务器
Method 1: Using Python Server

```bash
cd web
python -m http.server 8080
```

### 方法 2: 使用批处理脚本（Windows）
Method 2: Using Batch Script (Windows)

双击运行 `web/启动Web页面.bat`，然后在浏览器打开 http://localhost:8080

Or double-click `web/启动Web页面.bat` and open http://localhost:8080 in your browser.

### 方法 3: 使用 Node.js serve
Method 3: Using Node.js serve

```bash
cd web
npx serve -p 3001
```

---

## 开发工作流
Development Workflow

**重要提示**：所有网页代码修改都应该在 `web/` 目录下进行！

**Important Note**: All web code modifications should be done in the `web/` directory!

1. 修改 `web/` 目录下的文件
   Modify files in the `web/` directory

2. 同步代码到 Android 项目
   Sync code to Android project
   ```bash
   cd apk
   npx cap sync android
   ```

3. 在 Android Studio 中打开项目
   Open project in Android Studio
   ```bash
   cd apk
   npx cap open android
   ```

---

## Android APK 输出完整指南
Complete Android APK Build Guide

### 前置条件
Prerequisites

- 安装 [Node.js](https://nodejs.org/) (推荐 18.x 或更高版本)
- 安装 [Android Studio](https://developer.android.com/studio)
- 安装 Android SDK (通过 Android Studio SDK Manager)
- 配置 JDK (Android Studio 自带)

### 完整构建步骤
Complete Build Steps

#### 步骤 1: 准备代码
Step 1: Prepare Code

确保所有最新代码都在 `web/` 目录中：

Ensure all latest code is in the `web/` directory:

```bash
# 查看 web 目录内容
dir web
```

#### 步骤 2: 同步代码到 Android 项目
Step 2: Sync Code to Android Project

```bash
cd apk
npx cap sync android
```

这个命令会将 `web/` 目录下的所有文件复制到 `android/app/src/main/assets/public/` 目录。

This command copies all files from `web/` to `android/app/src/main/assets/public/`.

#### 步骤 3: 打开 Android Studio
Step 3: Open Android Studio

```bash
npx cap open android
```

或者直接在 Android Studio 中打开 `android/` 目录。

Or open the `android/` directory directly in Android Studio.

#### 步骤 4: 配置项目（首次）
Step 4: Configure Project (First Time)

1. 等待 Gradle 同步完成
   Wait for Gradle sync to complete

2. 如果提示安装缺失的 SDK 组件，点击安装
   If prompted to install missing SDK components, click Install

3. 确认项目结构正常
   Confirm project structure is normal

#### 步骤 5: 构建 Debug APK
Step 5: Build Debug APK

**方法 1: 使用菜单**
Method 1: Using Menu

1. 点击菜单栏 `Build` → `Build Bundle(s) / APK(s)` → `Build APK(s)`
   Click menu `Build` → `Build Bundle(s) / APK(s)` → `Build APK(s)`

2. 等待构建完成
   Wait for build to complete

3. 构建完成后，点击右下角的通知中的 `locate`
   After build completes, click `locate` in the bottom-right notification

**方法 2: 使用快捷键**
Method 2: Using Shortcut

- Windows: 按 `Ctrl + F9`
- Mac: 按 `Cmd + F9`

**方法 3: 使用命令行**
Method 3: Using Command Line

在 `android/` 目录下运行：
Run in `android/` directory:

```bash
cd android
.\gradlew assembleDebug
```

#### 步骤 6: 找到 APK 文件
Step 6: Locate APK File

构建成功后，APK 文件位于：
After successful build, APK file is located at:

```
android/app/build/outputs/apk/debug/app-debug.apk
```

#### 步骤 7: 构建 Release APK（可选）
Step 7: Build Release APK (Optional)

如果需要构建发布版本：
If you need a release version:

1. 配置签名密钥（需要 keystore 文件）
   Configure signing key (requires keystore file)

2. 点击 `Build` → `Generate Signed Bundle / APK`
   Click `Build` → `Generate Signed Bundle / APK`

3. 选择 `APK`，点击 `Next`
   Select `APK`, click `Next`

4. 选择 keystore 文件，输入密码
   Select keystore file, enter passwords

5. 选择 `release` build variant
   Select `release` build variant

6. 点击 `Finish` 开始构建
   Click `Finish` to start build

Release APK 位置：
Release APK location:
```
android/app/build/outputs/apk/release/app-release.apk
```
